# cinephly-api-layer

./: .gitignore  .gitlint  .pre-commit-config.yaml  pyproject.toml
app/: config.py  d1_client.py  main.py  schemas.py  utils.py
app/routers/: movies.py
tests/: conftest.py  test_api.py
